@@ -1,13 +1,21 @@
 package com.ksy.fmrs.service;
 
-import com.ksy.fmrs.dto.PlayerRealFootballStatDto;
+import com.ksy.fmrs.domain.Player;
+import com.ksy.fmrs.domain.PlayerStat;
+import com.ksy.fmrs.dto.PlayerStatDto;
 import com.ksy.fmrs.dto.PlayerStatisticsApiResponseDto;
 import com.ksy.fmrs.dto.TeamApiResponseDto;
+import com.ksy.fmrs.repository.Player.PlayerRepository;
+import com.ksy.fmrs.repository.PlayerStatRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestClient;
+
+import java.util.Objects;
+import java.util.Optional;
 
 @RequiredArgsConstructor
 @Service
@@ -26,45 +34,60 @@ public class FootballApiService {
     private static final String SEASON = "season=2023";
     private static final String AND = "&";
 
+    private final PlayerStatRepository  playerStatRepository;
+    private final PlayerRepository playerRepository;
     /**
      * 1. playerDetailDto 에서 playerName, teamName 가져옴
      * 2. teamName 을 통해 api-football 에서 teamApiId 가져옴
      * 3. playerName + teamApiId 를 통해 api-football 에서 playerApi + playerRealStat 가져옴
      * */
-    public PlayerRealFootballStatDto getPlayerRealStat(String playerName, String teamName) {
-        String url = PLAYER_STAT_URL + SEARCH + playerName + AND + TEAM_ID + getTeamApiIdByTeamName(teamName);
-        ResponseEntity<PlayerStatisticsApiResponseDto> response = createAPIFootballRestClient()
-                .get()
-                .uri(url)
-                .retrieve()
-                .toEntity(PlayerStatisticsApiResponseDto.class);
+    @Transactional
+    public PlayerStatDto getPlayerRealStat(Long playerId, String playerName, String teamName) {
 
-        return getPlayerRealFootballStatByStatistics(response.getBody());
+        return getOptionalPlayerStatById(playerId)
+                .map(PlayerStatDto::new)
+                .orElseGet(()->{
+                    String url = PLAYER_STAT_URL + SEARCH + playerName + AND + TEAM_ID + getTeamApiIdByTeamName(teamName);
+                    ResponseEntity<PlayerStatisticsApiResponseDto> response = getApiResponse(url, PlayerStatisticsApiResponseDto.class);
+                    PlayerStatDto playerStatDto = getPlayerStatFromStatistics(Objects.requireNonNull(response.getBody()));
+                    Player player = findPlayerById(playerId);
+                    player.updateImageUrl(playerStatDto.getImageUrl());
+                    savePlayerStat(playerStatDtoToPlayerStat(playerId, playerStatDto));
+                    return playerStatDto;
+                });
     }
 
     // 출장경기수, 골, 어시스트, 평점, 선수 이미지
-    private PlayerRealFootballStatDto getPlayerRealFootballStatByStatistics(PlayerStatisticsApiResponseDto response) {
-        PlayerStatisticsApiResponseDto.StatisticDto stat = response.getResponse().get(0).getStatistics().get(0);
-        PlayerRealFootballStatDto playerRealStatDto = new PlayerRealFootballStatDto();
+    private PlayerStatDto getPlayerStatFromStatistics(PlayerStatisticsApiResponseDto response) {
+        PlayerStatisticsApiResponseDto.StatisticDto stat = response.getResponse().getFirst().getStatistics().getFirst();
+        PlayerStatDto playerRealStatDto = new PlayerStatDto();
         playerRealStatDto.setGamesPlayed(stat.getGames().getAppearences());
         playerRealStatDto.setGoal(stat.getGoals().getTotal());
         playerRealStatDto.setAssist(stat.getGoals().getAssists());
         playerRealStatDto.setPk(stat.getPenalty().getScored());
         playerRealStatDto.setRating(stat.getGames().getRating());
-        playerRealStatDto.setImageUrl(response.getResponse().get(0).getPlayer().getPhoto());
+        playerRealStatDto.setImageUrl(response.getResponse().getFirst().getPlayer().getPhoto());
         return playerRealStatDto;
     }
 
     private Integer getTeamApiIdByTeamName(String teamName){
         String url = TEAM_URL+NAME+teamName;
 
-        ResponseEntity<TeamApiResponseDto> teamApiResponseDto = createAPIFootballRestClient()
+        ResponseEntity<TeamApiResponseDto> teamApiResponseDto = getApiResponse(url,  TeamApiResponseDto.class);
+        return Objects.requireNonNull(teamApiResponseDto.getBody())
+                .getResponse()
+                .getFirst()
+                .getTeam()
+                .getId();
+    }
+
+    // API 호출 공통 로직
+    private <T> ResponseEntity<T> getApiResponse(String url, Class<T> responseType) {
+        return createAPIFootballRestClient()
                 .get()
                 .uri(url)
                 .retrieve()
-                .toEntity(TeamApiResponseDto.class);
-
-        return teamApiResponseDto.getBody().getResponse().get(0).getTeam().getId();
+                .toEntity(responseType);
     }
 
     private RestClient createAPIFootballRestClient(){
@@ -72,5 +95,31 @@ public class FootballApiService {
                 .defaultHeader("X-RapidAPI-Key", apiFootballKey)
                 .defaultHeader("X-RapidAPI-Host", apiFootballHost)
                 .build();
+    }
+
+    private PlayerStat playerStatDtoToPlayerStat(Long playerId, PlayerStatDto playerStatDto) {
+        return PlayerStat.builder()
+                .playerId(playerId)
+                .gamesPlayed(playerStatDto.getGamesPlayed())
+                .goal(playerStatDto.getGoal())
+                .assist(playerStatDto.getAssist())
+                .pk(playerStatDto.getPk())
+                .rating(playerStatDto.getRating())
+                .imageUrl(playerStatDto.getImageUrl())
+                .build();
+    }
+
+    private void savePlayerStat(PlayerStat playerStat){
+        playerStatRepository.save(playerStat);
+    }
+
+    private Optional<PlayerStat> getOptionalPlayerStatById(Long playerStatId){
+        return playerStatRepository.findById(playerStatId);
+    }
+
+    private Player findPlayerById(Long playerId){
+        return playerRepository.findById(playerId).orElseThrow(
+                ()->new IllegalArgumentException("Player with id "+playerId+" not found")
+        );
     }
 }
